updated web designs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,13 +3,16 @@
   <head>
     <title>Pintresting</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<%= link_to "about" , about_path  %>
+  </head>
   <body>
-    <%= yield %>
+
+ <%= render 'layouts/header' %>
+<div class="container">
+          <%= yield %>
+     </div>
   </body>
 </html>
