--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -5,9 +5,12 @@
     <style>
       /* Email styles need to be inline */
     </style>
+
   </head>
 
   <body>
+  	<%= link_to "about" , about_path  %>
+  	<%= link_to "home" , root_path  %>
     <%= yield %>
   </body>
 </html>
